# better-timetagger-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  renovate.json
.github/actions/setup-uv-python/: action.yml
.github/workflows/: auto-release.yml  bump-version-pr.yml  checks.yml  validate-renovate-config.yml
better_timetagger_cli/: __init__.py
better_timetagger_cli/cli/: _cli.py  app.py  app_cmd.py  cli.py  diagnose.py  diagnose_cmd.py  export.py  export_cmd.py  import_cmd.py  resume.py  resume_cmd.py  setup.py  setup_cmd.py  show.py  show_cmd.py  start.py  start_cmd.py  status.py  status_cmd.py  stop.py  stop_cmd.py
better_timetagger_cli/lib/: api.py  click.py  click_utils.py  config.py  misc.py  output.py  records.py  rich_utils.py  types.py  utils.py
docs/: conf.py  index.rst
docs/source/: config.rst  demo.cast  quickstart.rst
src/better_timetagger_cli/cli/: _cli.py  app_cmd.py  diagnose_cmd.py  export_cmd.py  import_cmd.py  remove_cmd.py  restore_cmd.py  resume_cmd.py  setup_cmd.py  show_cmd.py  start_cmd.py  status_cmd.py  stop_cmd.py
src/better_timetagger_cli/lib/: __init__.py  api.py  cli.py  click.py  config.py  console.py  csv.py  misc.py  output.py  parsers.py  parsing.py  records.py  types.py
tests/test_lib/: test_api.py  test_config.py  test_records.py  test_timestamps.py
tests/test_lib/test_cli/: test_aliases.py
tests/test_lib/test_click/: conftest.py  test_aliases.py
tests/test_lib/test_config/: conftest.py  test_create_default_config.py  test_get_config.py  test_load_config.py  (+1 more)
tests/test_units/: test_package.py
(+7 files in other folders)
